package com.authentication_ms.dto;

public record SignInDto(String login, String password) {
}
